# CSClassFiles

./: README.MD
311Projects/Project2/: Bin  Binary  Hex  Hexadecimal  NumberBase.c  NumberBase.h  a.out  typescript
311Projects/Project3/: DB  DB.c  DB.c~  Interface  Interface.c~  MakeFile~  Test.txt  a.out  accountData.txt  accountData~
311Projects/Project6/: Makefile  Makefile~  Script.txt  cics_emp.c  signals  signals.c  signals.h  signals.h~
311Projects/minix files/: const1.h  fcntl.h  fsck.c  ls.c  open.c  read.c  stat.h
334/: CSCI_440_Project_2_Box.docx  ImagePresentation (1).pptx  ImagePresentation.odp
399_Code/: README.md
440Files/: Presentation.pptx  paragraph.docx  printHuff.cpp
440Files/ImageRec/: CMakeLists.txt  Editor.cpp  Editor.h  Image.cpp  Image.h  a.out  (+3 more)
CMST341/: Chapter9.pptx
CSCI330/: 330 Book.html  Assignment1.docx  assignment2.docx  assignment2_set.html  assignment6.docx
CSCI331 final review/: Review.docx
CSCI331 final review/CLion/BPlusTree/: BPlusTree.cpp  BPlusTree.h  Block.cpp  BulkLoad.cpp  CMakeLists.txt  Data.csv  Data.xlsx  InitTree  KeyPos.h  OneLevelTree.txt  README.md  RandomData.txt  Records.txt  ReplacementSelection.cpp  ReplacementSelection.h  SixThou.txt  Test Plan.xlsx  merge.h  search.cpp
CSCI331 final review/CLion/BPlusTree/CreateIDs/: Generate.cpp  SixThou.txt  a.out  id.txt
CSCI331 final review/CLion/BPlusTree/version1/: BPlusTree.cpp  Block.cpp  README.md  RandomData.txt  ReplacementSelection.h  fileOperations.h  main.cpp
CSCI402/: Assignment2.docx
CSCI411/: HW1.dia  HW1.dia~  Hw1_BookProbs.docx
(+197 files in other folders)
